--- a/config
+++ b/config
@@ -1,4 +1,14 @@
 have=NGX_HTTP_HEADERS . auto/have
+
 ngx_addon_name=ngx_http_select_lang_module
-HTTP_MODULES="$HTTP_MODULES ngx_http_select_lang_module"
-NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_select_lang_module.c"
+
+if test -n "$ngx_module_link"; then
+    ngx_module_type=HTTP
+    ngx_module_name=ngx_http_select_lang_module
+    ngx_module_srcs="$ngx_addon_dir/ngx_http_select_lang_module.c"
+
+    . auto/module
+else
+    HTTP_MODULES="$HTTP_MODULES ngx_http_select_lang_module"
+    NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_select_lang_module.c"
+fi
